--- a/portefolio/fireme.html
+++ b/portefolio/fireme.html
@@ -40,6 +40,7 @@
 			<div class="round-button menu">
 				<span class="menu-icon sprite"></span>
 				<span class="arrow menu"></span>
+				<span class="round-circle"></span>
 	
 			</div>
 		</div>
