menu animation hover

--- a/portefolio/fireme.html
+++ b/portefolio/fireme.html
@@ -40,7 +40,9 @@
 			<div class="round-button menu">
 				<span class="menu-icon sprite"></span>
 				<span class="arrow menu"></span>
-				<span class="round-circle"></span>
+				<span class="round-circle menu"></span>
+				<span class="background-effect-circle menu"></span>
+				<span class="background-effect-rectangle menu"></span>
 	
 			</div>
 		</div>
