--- a/portefolio/fireme.html
+++ b/portefolio/fireme.html
@@ -35,9 +35,8 @@
 	<div class="name">
 		maeva 
 	</div>
+	<div class="overlay menu"></div>
 	<div class="menu-emplacement">
-		
-			
 				<span class="menu-icon sprite"></span>
 				<span class="arrow menu"></span>
 				<span class="round-circle menu"></span>
@@ -49,10 +48,11 @@
 				</div>
 				<span class="background-effect-circle menu"></span>
 				<span class="background-effect-rectangle menu"></span>
+
 	
-		
-	
+
 	</div>
+
 
 </body>
 </html>
