--- a/portefolio/fireme.html
+++ b/portefolio/fireme.html
@@ -35,7 +35,14 @@
 	<div class="name">
 		maeva 
 	</div>
-	<div class="overlay menu"></div>
+	<div class="overlay menu">
+		<menu class="overlay-content">
+			<a class="overlay-link">MEUHOI</a>
+			<a class="overlay-link">COMPETENCES</a>	
+			<a class="overlay-link">CLIENTS</a>	
+			<a class="overlay-link">CONTACT</a>			
+		</menu>
+	</div>
 	<div class="menu-emplacement">
 				<span class="menu-icon sprite"></span>
 				<span class="arrow menu"></span>
@@ -43,16 +50,17 @@
 				<div class="text-wrapper">
 					<span class="text-menu">
 						<p class="text-principal">MEUHNU</p>
-						<p class="text-soustitre">Cliquez ici pour activer le menu</p>				
+						<p class="text-soustitre">Cliquez ici pour <br />
+						activer le menu</p>				
 					</span>
 				</div>
 				<span class="background-effect-circle menu"></span>
 				<span class="background-effect-rectangle menu"></span>
 
-	
+	</div>
+	<div id="About">
 
 	</div>
-
 
 </body>
 </html>
