--- a/portefolio/fireme.html
+++ b/portefolio/fireme.html
@@ -22,8 +22,9 @@
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 
     <!-- CSS -->
+	<link href="https://fonts.googleapis.com/css?family=Erica+One|Ranchers" rel="stylesheet"> 
     <link type="text/css" rel="stylesheet" href="css/style.css" />
-
+	
     <!--json -->
     <script id="data" type="application/json" src="json/data.json"></script>
 
