--- a/portefolio/fireme.html
+++ b/portefolio/fireme.html
@@ -42,7 +42,7 @@
 				<a class="overlay-link me">MEUHOI</a>
 			</li>
 			<li>
-				<a class="overlay-link skill">COMPES</a>	
+				<a class="overlay-link skill">COMPETENCES</a>	
 			</li>
 			<li>
 				<a class="overlay-link work">CLIENTS</a>
@@ -62,7 +62,7 @@
 				<a class="overlay-link work">WORKS</a>
 			</li>
 			<li>	
-				<a class="overlay-link contact">COWTACT</a>
+				<a class="overlay-link contact">CONTACT</a>
 			</li>				
 		</ul>
 		<form class="menu-search" method="get" action="/search">
