--- a/portefolio/fireme.html
+++ b/portefolio/fireme.html
@@ -36,6 +36,14 @@
 	<div class="name">
 		maeva 
 	</div>
+<div id="about">	
+	<div class="img">
+		<img src="img/maevach.jpg">	
+	</div>
+	<div class="description">
+		<p> lore zejrio ezrzeporipo ieroz roze rize porizepori zepori </p>
+	</div>
+</div>	
 	<div class="overlay menu duplicate">
 		<ul class="overlay-content fr">
 			<li>
