--- a/portefolio/fireme.html
+++ b/portefolio/fireme.html
@@ -41,9 +41,25 @@
 		<img src="img/maevach.jpg">	
 	</div>
 	<div class="description">
+		<div class="fr"> 	
+			<h2>La vache !</h2>
+			<p> Je suis developper Front-End et Webdsigner. Je réside actuellement à Antibes, dans le Sud de la France.
+			</p>
+			<p>
+			Ayant exploré le web dans sa diversité, tel que le référencement, l'ergonomie, le design, le developpement Front et Back End, j'ai décidé de me spécialisé dans le Front End et le Webdesign.  
+			</p>
+		</div>
+		<p class="engl"> lalalalalalalalala </p>
+	</div>
+</div>
+<div id="skill">	
+	<div class="img">
+		<img src="img/maevach.jpg">	
+	</div>
+	<div class="description">
 		<p> lore zejrio ezrzeporipo ieroz roze rize porizepori zepori </p>
 	</div>
-</div>	
+</div>		
 	<div class="overlay menu duplicate">
 		<ul class="overlay-content fr">
 			<li>
@@ -77,10 +93,10 @@
 	<div class="overlay menu one">
 		<ul class="overlay-content fr">
 			<li>
-				<a class="overlay-link" data-title="me">MEUHOI</a>
+				<a href="#about" class="overlay-link" data-title="me">MEUHOI</a>
 			</li>
 			<li>
-				<a class="overlay-link" data-title="skill">COMPETENCES</a>	
+				<a href="#skill" class="overlay-link" data-title="skill">COMPETENCES</a>	
 			</li>
 			<li>
 				<a class="overlay-link" data-title="work">CLIENTS</a>
@@ -91,10 +107,10 @@
 		</ul>
 		<ul class="overlay-content engl">
 			<li>
-				<a class="overlay-link" data-title="me">MOOE</a>
+				<a href="#about" class="overlay-link" data-title="me">MOOE</a>
 			</li>
 			<li>
-				<a class="overlay-link skill" data-title="skill">SKILLS</a>	
+				<a href="#skill" class="overlay-link skill" data-title="skill">SKILLS</a>	
 			</li> 
 			<li>
 				<a class="overlay-link" data-title="work">WORKS</a>
