--- a/portefolio/work.html
+++ b/portefolio/work.html
@@ -1,13 +1,9 @@
- <!-- JAVASCRIPT -->
- <script type="text/javascript" src="js/mc_slider.js"></script>
+
  <!-- CSS -->
 <link type="text/css" rel="stylesheet" href="css/slider.css" />
 
 <div class="slider-module" tabindex="1">
  <div class="wrapper">
-   <div class="direction arrow previous">
-        <a href="javascript:void(0);">+</a>
-    </div>
     <div class="slider">
       <div class="item" id="1">
         <div class="item-info-container">
@@ -66,14 +62,12 @@
              </div>
       </div>
     </div>
-     <div class="direction arrow next">
-        <a href="javascript:void(0);">+</a>
-    </div>
-    </div>
   </div>
-
-<script>
-    $(document).ready(function() {
+ <!-- JAVASCRIPT -->
+	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="js/mc_slider.js"></script>
+<script type="text/javascript">
+$(document).ready(function(){
 
         $('.slider-module').oMediaCarousel(
                 {
@@ -84,6 +78,7 @@
                     setInfinite: true
                 }
         );
-    });
+});
+   
 </script>
 
