--- a/portefolio/maevaCh.html
+++ b/portefolio/maevaCh.html
@@ -30,6 +30,7 @@
 
     <!-- JAVASCRIPT -->
     <script type="text/javascript" src="js/effect.js"></script>
+	
 
 </head>
 <body>
@@ -46,7 +47,6 @@
 	
 </div>
 <div id="work">
-
 	<object type="text/html" data="work.html" style="width:100%; height:500px;"></object>
 </div>
 	<div class="overlay menu duplicate">
@@ -88,7 +88,7 @@
 				<a href="#skill" class="overlay-link" data-title="skill">COMPETENCES</a>	
 			</li>
 			<li>
-				<a class="overlay-link" data-title="work">CLIENTS</a>
+				<a href="#work" class="overlay-link" data-title="work">CLIENTS</a>
 			</li>
 			<li>	
 				<a class="overlay-link" data-title="contact">CONTACT</a>
@@ -102,7 +102,7 @@
 				<a href="#skill" class="overlay-link skill" data-title="skill">SKILLS</a>	
 			</li> 
 			<li>
-				<a class="overlay-link" data-title="work">WORKS</a>
+				<a href="#work" class="overlay-link" data-title="work">WORKS</a>
 			</li>
 			<li>	
 				<a class="overlay-link" data-title="contact">CONTACT</a>
