modif strip work

--- a/portefolio/maevaCh.html
+++ b/portefolio/maevaCh.html
@@ -47,8 +47,103 @@
 	
 </div>
 <div id="work">
-	<object type="text/html" data="work.html" style="width:100%; height:500px;"></object>
+	<object type="text/html" data="work.html" style="width:100%; height:650px;"></object>
+	<div class="container-main">
+		<h2> Orange</h2>
+		<div class="strip">
+			<div class="tile one">
+				<div class="container">
+				
+					<div class="image height100 width50">
+						 <img src="img/orangebatiment.jpg" alt="" />
+						 <div class="mask"></div>
+
+						<div class="icon-work">
+							<span class="icon-client"><img src=""></span>
+						</div>
+					</div>
+					<div class="content height100 width50">
+						<div class="info">
+					 		<div class="tag">meteo.orange.fr</div>
+							<h3>Dev Front</h3>
+							<p>Scss, HTML5, JS, Smarty, medias queries</p>
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</div>
+		<div class="strip">
+			<div class="tile three number1">
+				<div class="container">
+					<div class="image height70">
+						 <img src="img/homemeteo.jpg" alt="" />
+						 <div class="mask"></div>
+
+						<div class="icon-work">
+							<span class="icon-client"><img src=""></span>
+						</div>
+					</div>
+
+					<div class="content height30">
+						<img title="" alt="" src="img/iconmeteo.png">
+						<div class="info">
+					 		<div class="tag">meteo.orange.fr</div>
+							<h3>Dev Front</h3>
+							<p>Scss, HTML5, JS, Smarty, medias queries</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			
+			<div class="tile three blocHref number2">
+				<div class="container">
+					<div class="image height70">
+						 <img src="img/homesport.jpg" alt="" />
+						 <div class="mask"></div>
+
+						<div class="icon-work">
+							<span class="icon-client"><img src=""></span>
+						</div>
+					</div>
+
+					<div class="content height30">
+						<img title="" alt="" src="img/iconmeteo.png">
+						<div class="info">
+					 		<div class="tag">meteo.orange.fr</div>
+							<h3>Dev Front</h3>
+							<p>Scss, HTML5, JS, Smarty, medias queries</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			
+			<div class="tile three number3">
+				<div class="container">
+					<div class="image height70">
+						 <img src="img/homecinema.jpg" alt="" />
+						 <div class="mask"></div>
+
+						<div class="icon-work">
+							<span class="icon-client"><img src=""></span>
+						</div>
+					</div>
+
+					<div class="content height30">
+						<img title="" alt="" src="img/iconmeteo.png">
+						<div class="info">
+					 		<div class="tag">meteo.orange.fr</div>
+							<h3>Dev Front</h3>
+							<p>Scss, HTML5, JS, Smarty, medias queries</p>
+						</div>
+					</div>
+				</div>
+			</div>
+						
+		</div>
+	</div>
 </div>
+
 	<div class="overlay menu duplicate">
 		<ul class="overlay-content fr">
 			<li>
