--- a/portefolio/work.html
+++ b/portefolio/work.html
@@ -11,23 +11,23 @@
     <div class="slider" tabindex ="0">
       <div class="item" >
 		<div class="item-image-container">
-			<img src="./img/image1.jpg" />
+			<img src="./img/meteoorange.jpg" />
 		 </div>
       </div>
       <div class="item">
             <div class="item-image-container">
-                <img src="./img/image2.jpeg" />
+               <img src="./img/meteoorange.jpg" />
              </div>
       </div>
       <div class="item">
            
 		<div class="item-image-container">
-			<img src="./img/image3.jpg" />
+			<img src="./img/meteoorange.jpg" />
 		 </div>
       </div>
         <div class="item">
             <div class="item-image-container">
-                <img src="./img/image4.jpg" />
+                <img src="./img/meteoorange.jpg" />
              </div>
       </div>
     </div>
